--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,83 @@
-django==1.11.7
+adium-theme-ubuntu==0.3.4
+aniso8601==1.1.0
+apt-xapian-index==0.45
+asn1crypto==0.23.0
+backports.shutil-get-terminal-size==1.0.0
+certifi==2017.11.5
+cffi==1.11.2
+chardet==3.0.4
+colorama==0.2.5
+configparser==3.5.0
+coverage==4.4.2
+cryptography==2.1.4
+debtagshw==0.1
+defer==1.0.6
+dirspec==13.10
+dj-database-url==0.4.2
+Django==1.11.7
+djangorestframework==3.7.3
+duplicity==0.6.23
+enum34==1.1.6
+extras==0.0.3
+fixtures==0.3.14
+flake8==3.5.0
+Flask==0.10.1
+Flask-HTTPAuth==3.0.0
+Flask-RESTful==0.3.5
+gunicorn==19.7.1
+html5lib==0.999
+httplib2==0.8
+idna==2.6
+ipaddress==1.0.18
+itsdangerous==0.24
+Jinja2==2.8
+lockfile==0.8
+lxml==3.3.3
+MarkupSafe==0.23
+mccabe==0.6.1
+mox3==0.7.0
+oauthlib==0.6.1
+oneconf==0.3.7.14.4.1
+PAM==0.4.2
+passlib==1.6.5
+pathlib==1.0.1
+pbr==0.7.0
+pew==1.1.1
+pexpect==3.1
+Pillow==2.3.0
+pipenv==8.3.2
+piston-mini-client==0.7.5
+ply==3.4
+psycopg2==2.7.3.2
+pycodestyle==2.3.1
+pycparser==2.18
+pycrypto==2.6.1
+pycups==1.9.66
+pycurl==7.19.3
+pyflakes==1.6.0
+pygobject==3.12.0
+pyOpenSSL==17.5.0
+pyserial==2.6
+pysmbc==1.0.14.1
+python-apt===0.9.3.5ubuntu2
+python-dateutil==2.4.2
+python-debian===0.1.21-nmu2ubuntu2
+python-decouple==3.1
+python-mimeparse==0.1.4
+pytz==2015.7
+pyxdg==0.25
+reportlab==3.0
+requests==2.18.4
+shutilwhich==1.1.0
+six==1.11.0
+SQLAlchemy==1.0.12
+system-service==0.1.6
+testtools==0.9.35
+Twisted-Core==13.2.0
+Twisted-Web==13.2.0
+urllib3==1.22
+virtualenv==14.0.6
+virtualenv-clone==0.2.6
+Werkzeug==0.11.4
+whitenoise==3.3.1
+zope.interface==4.0.5
